# traccc

data/: .gitattributes
device/common/include/traccc/seeding/device/: count_triplets.hpp
device/cuda/src/seeding/: seed_finding.cu
examples/run/common/: throughput_mt_alt.ipp
examples/run/cuda/: CMakeLists.txt  full_chain_algorithm.cpp  full_chain_algorithm.hpp  throughput_mt.cpp
